Quartz context